adding touches
